tests/suite/fail/generated/types/fail_ge_string_bool.ny
fn main() {
    let _ = "a" >= true //~ ERROR Type mismatch in comparison
}
